# ze

./: .gitignore  Doxyfile  Makefile.am  README.org  configure.ac  lmdb.pc
docs/: Doxyfile
git/: Makefile.am  ze-git  ze-git.in
src/: Makefile.am  conf.c  conf.h  db.c  db.h  error.h  id.c  id.h  io.c  io.h  lexer.l  main.c  parser.y  ze.1
tests/: Makefile.am  check_conf.c  check_id.c  unix_unit.h
